--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,6 +58,10 @@ $tertiaire: #99E2D0;
 
     }
 
+    a{
+        text-decoration: none;
+    }
+
     &:hover{
         opacity: 0.8;
         box-shadow: 1rem 1rem 20px;
@@ -84,7 +88,7 @@ $tertiaire: #99E2D0;
 
     &_icone{
         margin: 0 20px 20px 40px;
-        margin-left: 20px;
+        
         padding: 30px 50px 30px 18px;
         font-weight: bold;
         background: #F6F6F6;
@@ -93,16 +97,18 @@ $tertiaire: #99E2D0;
         width: 300px;
         max-height: 78px;
 
-    }
+        &:hover{
+            background: #f5edff;
+        }
 
-    &:hover{
-        background: #f5edff;
     }
 
     .fas{
         color: $primaire;
     
     }
+
+    
 
     &_icone_number{
         width: 18px;
@@ -123,38 +129,88 @@ $tertiaire: #99E2D0;
 /* Début de main*/
 .restaurant{
     background: #f6f6f6;
+    
 
-    &_title{
-        padding: 50px 0 10px 22px;
+    &_title h3{
+        padding: 30px 0 10px 22px;
     }
 
-    &_bloc{
+    &_bloc a {
        display: flex; 
        flex-direction: row;
        flex-wrap: wrap;
-       justify-content: center;
+       align-items: center;
+      
+       
     }
 
     &_card{
         border-radius: 20px;
-        margin-bottom: 18px;
+        margin-bottom: 10px;
         background: white;
         position: relative;
-        max-width: 280px;
-        min-width: 280px;
+        max-width: 250px;
+        
     }
 
-    &_card_image{
+    &_card_image a img {
         width: 100%;
-        max-height: 175px;
+        max-height: 170px;
         border-top-left-radius: 20px;
-        border-bottom-right-radius: 20px;object-fit: cover;
+        border-bottom-right-radius: 20px;
+        object-fit: cover;
     }
 
-    &_heart{
+    &_heart fas{
         position: absolute;
         right: 20px;
         top: 1;
     }
 
+    .btn_new{
+        background: $tertiaire;
+        padding: 0.5rem;
+        border-radius: 0.125rem;
+        color: #1b6150;
+        position: absolute;
+        top: 1rem;
+        right: 0.75rem;
+    }
+
 }
+/*Fin du main*/
+
+/*Début du footer*/
+.section_footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: #353535;
+    color: #FFF;
+    padding: 25px 0;
+    min-width: 320px;
+
+    &_title h5{
+        margin: 0 0 10px 20 px;
+        color: #e6e6e6;
+        font-family: 'Shrikhand, cursive';
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    a{
+        text-decoration: none;
+    }
+
+    a:hover{
+        text-decoration: underline;
+        color: #FFF;
+    }
+
+
+
+
+}
+
+
